; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_XLogFileOpen.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_XLogFileOpen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXPGPATH = common dso_local global i32 0, align 4
@ThisTimeLineID = common dso_local global i32 0, align 4
@wal_segment_size = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@PG_BINARY = common dso_local global i32 0, align 4
@sync_method = common dso_local global i32 0, align 4
@PANIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"could not open file \22%s\22: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @XLogFileOpen(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* @MAXPGPATH, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = load i32, i32* @ThisTimeLineID, align 4
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @wal_segment_size, align 4
  %13 = call i32 @XLogFilePath(i8* %9, i32 %10, i32 %11, i32 %12)
  %14 = load i32, i32* @O_RDWR, align 4
  %15 = load i32, i32* @PG_BINARY, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @sync_method, align 4
  %18 = call i32 @get_sync_bit(i32 %17)
  %19 = or i32 %16, %18
  %20 = call i32 @BasicOpenFile(i8* %9, i32 %19)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %1
  %24 = load i32, i32* @PANIC, align 4
  %25 = call i32 (...) @errcode_for_file_access()
  %26 = call i32 @errmsg(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i8* %9)
  %27 = call i32 @ereport(i32 %24, i32 %26)
  br label %28

28:                                               ; preds = %23, %1
  %29 = load i32, i32* %5, align 4
  %30 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %30)
  ret i32 %29
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @XLogFilePath(i8*, i32, i32, i32) #2

declare dso_local i32 @BasicOpenFile(i8*, i32) #2

declare dso_local i32 @get_sync_bit(i32) #2

declare dso_local i32 @ereport(i32, i32) #2

declare dso_local i32 @errcode_for_file_access(...) #2

declare dso_local i32 @errmsg(i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
